# screepfish

./: .gitignore  .gitmodules  CMakeLists.txt  build.bat  build.sh  main.cpp  p0.txt
assets/chess/: pieces.json
repo/: init.sh
repo/repo/: __init__.py  repo.py
source/: env.cpp  env.hpp  main.cpp  screepfish.cpp  screepfish.hpp
source/chess/: bitboard.cpp  bitboard.hpp  board.cpp  board.hpp  board_base.cpp  board_base.hpp  board_hash.hpp  book.cpp  book.hpp  chess.cpp  chess.hpp  fen.cpp  fen.hpp  move.cpp  move.hpp  move_tree.cpp  move_tree.hpp  piece.cpp  piece.hpp  position.cpp  position.hpp  precompute.hpp  rating.cpp  rating.hpp
source/engine/: engine.cpp  engine.hpp
source/lichess/: json.hpp  lichess.cpp  lichess.hpp
source/nn/: net.cpp  net.hpp
source/terminal/: CMakeLists.txt  board_view_terminal.cpp  board_view_terminal.hpp  terminal.cpp  terminal.hpp  terminal_object.hpp
source/tests/: result.hpp  test_base.hpp  test_book.cpp  test_book.hpp  test_castling.hpp  test_position_count.hpp  tests.cpp  tests.hpp
source/utility/: arena.hpp  block_allocator.hpp  bset.hpp  logging.cpp  logging.hpp  number.hpp  perf.hpp  string.hpp  system.cpp  system.hpp  utility.cpp  utility.hpp
